--- a/src/app/welcome/components/total-nutrition/total-nutrition.component.html
+++ b/src/app/welcome/components/total-nutrition/total-nutrition.component.html
@@ -24,93 +24,93 @@
       </div>
       <div class="item">
         <div class="text">
-          <p>Total Fat <span>{{(totalNutrition.totalNutrients.FAT.quantity | number: "1.0-1")! |
+          <p>Total Fat <span>{{(totalNutrition.totalNutrients.FAT?.quantity | number: "1.0-1")! |
               removeComma}}</span>
-            <span> {{totalNutrition.totalNutrients.FAT.unit}}</span>
+            <span> {{totalNutrition.totalNutrients.FAT?.unit}}</span>
           </p>
         </div>
         <div class="value">
           <p>
-            {{(totalNutrition.totalDaily.FAT.quantity | number: "1.0-0")}}
-            <span>{{totalNutrition.totalDaily.FAT.unit}}</span>
+            {{(totalNutrition.totalDaily.FAT?.quantity | number: "1.0-0")}}
+            <span>{{totalNutrition.totalDaily.FAT?.unit}}</span>
           </p>
         </div>
       </div>
       <div class="item">
         <div class="text">
-          <p>Saturated Fat <span>{{(totalNutrition.totalNutrients.FASAT.quantity | number: "1.0-1")! |
+          <p>Saturated Fat <span>{{(totalNutrition.totalNutrients.FASAT?.quantity | number: "1.0-1")! |
               removeComma}}</span>
-            <span> {{totalNutrition.totalNutrients.FASAT.unit}}</span>
+            <span> {{totalNutrition.totalNutrients.FASAT?.unit}}</span>
           </p>
         </div>
         <div class="value">
           <p>
-            {{(totalNutrition.totalDaily.FASAT.quantity | number: "1.0-0")}}
-            <span>{{totalNutrition.totalDaily.FASAT.unit}}</span>
+            {{(totalNutrition.totalDaily.FASAT?.quantity | number: "1.0-0")}}
+            <span>{{totalNutrition.totalDaily.FASAT?.unit}}</span>
           </p>
         </div>
       </div>
       <div class="item">
         <div class="text">
-          <p>Cholesterol <span>{{(totalNutrition.totalNutrients.CHOLE.quantity | number: "1.0-1")! |
+          <p>Cholesterol <span>{{(totalNutrition.totalNutrients.CHOLE?.quantity | number: "1.0-1")! |
               removeComma}}</span>
-            <span> {{totalNutrition.totalNutrients.CHOLE.unit}}</span>
+            <span> {{totalNutrition.totalNutrients.CHOLE?.unit}}</span>
           </p>
         </div>
         <div class="value">
           <p>
-            {{(totalNutrition.totalDaily.CHOLE.quantity | number: "1.0-0")}}
-            <span>{{totalNutrition.totalDaily.CHOLE.unit}}</span>
+            {{(totalNutrition.totalDaily.CHOLE?.quantity | number: "1.0-0")}}
+            <span>{{totalNutrition.totalDaily.CHOLE?.unit}}</span>
           </p>
         </div>
       </div>
       <div class="item">
         <div class="text">
-          <p>Sodium <span>{{(totalNutrition.totalNutrients.NA.quantity | number: "1.0-1")! |
+          <p>Sodium <span>{{(totalNutrition.totalNutrients.NA?.quantity | number: "1.0-1")! |
               removeComma}}</span>
-            <span> {{totalNutrition.totalNutrients.NA.unit}}</span>
+            <span> {{totalNutrition.totalNutrients.NA?.unit}}</span>
           </p>
         </div>
         <div class="value">
           <p>
-            {{(totalNutrition.totalDaily.NA.quantity | number: "1.0-0")}}
-            <span>{{totalNutrition.totalDaily.NA.unit}}</span>
+            {{(totalNutrition.totalDaily.NA?.quantity | number: "1.0-0")}}
+            <span>{{totalNutrition.totalDaily.NA?.unit}}</span>
           </p>
         </div>
       </div>
       <div class="item">
         <div class="text">
-          <p>Total Carbohydrate <span>{{(totalNutrition.totalNutrients.CHOCDF.quantity | number: "1.0-1")! |
+          <p>Total Carbohydrate <span>{{(totalNutrition.totalNutrients.CHOCDF?.quantity | number: "1.0-1")! |
               removeComma}}</span>
-            <span> {{totalNutrition.totalNutrients.CHOCDF.unit}}</span>
+            <span> {{totalNutrition.totalNutrients.CHOCDF?.unit}}</span>
           </p>
         </div>
         <div class="value">
           <p>
-            {{(totalNutrition.totalDaily.CHOCDF.quantity | number: "1.0-0")}}
-            <span>{{totalNutrition.totalDaily.CHOCDF.unit}}</span>
+            {{(totalNutrition.totalDaily.CHOCDF?.quantity | number: "1.0-0")}}
+            <span>{{totalNutrition.totalDaily.CHOCDF?.unit}}</span>
           </p>
         </div>
       </div>
       <div class="item">
         <div class="text">
-          <p>Dietary Fiber <span>{{(totalNutrition.totalNutrients.FIBTG.quantity | number: "1.0-1")! |
+          <p>Dietary Fiber <span>{{(totalNutrition.totalNutrients.FIBTG?.quantity | number: "1.0-1")! |
               removeComma}}</span>
-            <span> {{totalNutrition.totalNutrients.FIBTG.unit}}</span>
+            <span> {{totalNutrition.totalNutrients.FIBTG?.unit}}</span>
           </p>
         </div>
         <div class="value">
           <p>
-            {{(totalNutrition.totalDaily.FIBTG.quantity | number: "1.0-0")}}
-            <span>{{totalNutrition.totalDaily.FIBTG.unit}}</span>
+            {{(totalNutrition.totalDaily.FIBTG?.quantity | number: "1.0-0")}}
+            <span>{{totalNutrition.totalDaily.FIBTG?.unit}}</span>
           </p>
         </div>
       </div>
       <div class="item">
         <div class="text">
-          <p>Total Sugars <span>{{(totalNutrition.totalNutrients.SUGAR.quantity | number: "1.0-1")! |
+          <p>Total Sugars <span>{{(totalNutrition.totalNutrients.SUGAR?.quantity | number: "1.0-1")! |
               removeComma}}</span>
-            <span> {{totalNutrition.totalNutrients.SUGAR.unit}}</span>
+            <span> {{totalNutrition.totalNutrients.SUGAR?.unit}}</span>
           </p>
         </div>
         <div class="value">
@@ -122,9 +122,9 @@
       </div>
       <div class="item">
         <div class="text">
-          <p>Protein <span>{{(totalNutrition.totalNutrients.PROCNT.quantity | number: "1.0-1")! |
+          <p>Protein <span>{{(totalNutrition.totalNutrients.PROCNT?.quantity | number: "1.0-1")! |
               removeComma}}</span>
-            <span> {{totalNutrition.totalNutrients.PROCNT.unit}}</span>
+            <span> {{totalNutrition.totalNutrients.PROCNT?.unit}}</span>
           </p>
         </div>
         <div class="value">
@@ -136,9 +136,9 @@
       </div>
       <div class="item">
         <div class="text">
-          <p>Vitamin D <span>{{(totalNutrition.totalNutrients.VITD.quantity | number: "1.0-1")! |
+          <p>Vitamin D <span>{{(totalNutrition.totalNutrients.VITD?.quantity | number: "1.0-1")! |
               removeComma}}</span>
-            <span> {{totalNutrition.totalNutrients.VITD.unit}}</span>
+            <span> {{totalNutrition.totalNutrients.VITD?.unit}}</span>
           </p>
         </div>
         <div class="value">
@@ -150,9 +150,9 @@
       </div>
       <div class="item">
         <div class="text">
-          <p>Calcium <span>{{(totalNutrition.totalNutrients.CA.quantity | number: "1.0-1")! |
+          <p>Calcium <span>{{(totalNutrition.totalNutrients.CA?.quantity | number: "1.0-1")! |
               removeComma}}</span>
-            <span> {{totalNutrition.totalNutrients.CA.unit}}</span>
+            <span> {{totalNutrition.totalNutrients.CA?.unit}}</span>
           </p>
         </div>
         <div class="value">
@@ -164,9 +164,9 @@
       </div>
       <div class="item">
         <div class="text">
-          <p>Iron <span>{{(totalNutrition.totalNutrients.FE.quantity | number: "1.0-1")! |
+          <p>Iron <span>{{(totalNutrition.totalNutrients.FE?.quantity | number: "1.0-1")! |
               removeComma}}</span>
-            <span> {{totalNutrition.totalNutrients.FE.unit}}</span>
+            <span> {{totalNutrition.totalNutrients.FE?.unit}}</span>
           </p>
         </div>
         <div class="value">
@@ -178,9 +178,9 @@
       </div>
       <div class="item">
         <div class="text">
-          <p>Potassium <span>{{(totalNutrition.totalNutrients.K.quantity | number: "1.0-1")! |
+          <p>Potassium <span>{{(totalNutrition.totalNutrients.K?.quantity | number: "1.0-1")! |
               removeComma}}</span>
-            <span> {{totalNutrition.totalNutrients.K.unit}}</span>
+            <span> {{totalNutrition.totalNutrients.K?.unit}}</span>
           </p>
         </div>
         <div class="value">
